create html page for another recipe and update index page to add link

--- a/index.html
+++ b/index.html
@@ -6,9 +6,12 @@
     </head>
 
     <body>
-        <h1>Odin Recipes</h1>
+        <h1>Recipes</h1>
+
+        <!-- create list of links with different recipes-->
         <ul>
             <li><a href="./recipes/lasagna.html">Lasagna</a></li>
+            <li><a href="./recipes/strawberry-lemonade.html">Strawberry Lemonade</a></li>
         </ul>
     </body>
 </html>
