--- a/recipes/lasagna.html
+++ b/recipes/lasagna.html
@@ -34,5 +34,7 @@
             <li>Bake in preheated oven for 30 minutes, or until cheese is melted and bubbly.</li>
         </ol>
 
+        <p><a href="../index.html">Return to homepage</a></p>
+
     </body>
 </html>
