added external css

--- a/recipes/lasagna.html
+++ b/recipes/lasagna.html
@@ -3,7 +3,19 @@
     <head>
         <meta charset="UTF-8">
         <title>Lasagna</title>
+        <link rel="stylesheet" type="text/css" href="../styles.css"/> <!--link external CSS-->
     </head>
+
+
+    <!--- linking CSS internally
+    <style>  
+        img {
+            height: auto;
+            width: 500px;
+        }
+    </style>
+    -->
+
 
     <body>
         <h1>Lasagna</h1>
