--- a/recipes/strawberry-lemonade.html
+++ b/recipes/strawberry-lemonade.html
@@ -5,7 +5,17 @@
     <head>
         <meta charset="UTF-8">
         <title>Strawberry Lemonade</title>
+        <link rel="stylesheet" href="../styles.css"> <!-- external CSS-->
     </head>
+
+    <!-- internal CSS
+    <style> /* using CSS to reduce image scale size */
+        img {
+            height: auto;
+            width: 500px;
+        }
+    </style>
+-->
 
     <body>
         <h1>Strawberry Lemonade</h1>
